# nlw_operator

./: .gitignore  README.md  lenet5.ipynb  main.py  pyproject.toml
computer_vision_app/: .sesskey  app.py  pyproject.toml
computer_vision_app/assets/: script.js
computer_vision_app/core/: __init__.py
recognize_system/: classifier_timm.ipynb  collect_landmarks.py  main.py  pyproject.toml  segmentation_clipseg.ipynb  webcam_recog.py
weights/: lenet5_mnist.pth
