[project]
name = "recognize-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.50.1",
    "ipython>=9.11.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
